--- a/src/output.css
+++ b/src/output.css
@@ -1045,6 +1045,38 @@ video {
   max-width: 100%;
 }
 
+.max-w-\[\] {
+  max-width: ;
+}
+
+.max-w-\[100px\] {
+  max-width: 100px;
+}
+
+.max-w-\[1000px\] {
+  max-width: 1000px;
+}
+
+.max-w-\[00px\] {
+  max-width: 00px;
+}
+
+.max-w-\[700px\] {
+  max-width: 700px;
+}
+
+.max-w-\[660px\] {
+  max-width: 660px;
+}
+
+.max-w-\[670px\] {
+  max-width: 670px;
+}
+
+.max-w-\[650px\] {
+  max-width: 650px;
+}
+
 .flex-shrink-0 {
   flex-shrink: 0;
 }
@@ -1238,14 +1270,6 @@ video {
   border-radius: 0.75rem;
 }
 
-.rounded-bl-\[10px\] {
-  border-bottom-left-radius: 10px;
-}
-
-.rounded-tl-\[10px\] {
-  border-top-left-radius: 10px;
-}
-
 .border {
   border-width: 1px;
 }
@@ -1268,14 +1292,6 @@ video {
 
 .border-\[5px\] {
   border-width: 5px;
-}
-
-.border-l-0 {
-  border-left-width: 0px;
-}
-
-.border-r-0 {
-  border-right-width: 0px;
 }
 
 .border-t-\[1px\] {
@@ -1578,10 +1594,6 @@ video {
 
 .pt-24 {
   padding-top: 6rem;
-}
-
-.pt-3 {
-  padding-top: 0.75rem;
 }
 
 .pt-\[130px\] {
@@ -2138,8 +2150,8 @@ video {
     height: 15vh;
   }
 
-  .max-md\:w-\[350px\] {
-    width: 350px;
+  .max-md\:w-\[300px\] {
+    width: 300px;
   }
 
   .max-md\:flex-wrap {
@@ -2187,8 +2199,8 @@ video {
 }
 
 @media not all and (min-width: 640px) {
-  .max-sm\:w-\[300px\] {
-    width: 300px;
+  .max-sm\:w-\[200px\] {
+    width: 200px;
   }
 
   .max-sm\:text-\[16px\] {
@@ -2199,18 +2211,14 @@ video {
     font-size: 30px;
   }
 
-  .max-sm\:leading-\[30px\] {
-    line-height: 30px;
-  }
-
   .max-sm\:leading-\[60px\] {
     line-height: 60px;
   }
 }
 
 @media not all and (min-width: 480px) {
-  .max-xs\:w-\[50px\] {
-    width: 50px;
+  .max-xs\:w-\[90px\] {
+    width: 90px;
   }
 }
 
@@ -2239,14 +2247,6 @@ video {
 
   .max-ht\:text-\[20px\] {
     font-size: 20px;
-  }
-
-  .max-ht\:leading-\[\] {
-    line-height: ;
-  }
-
-  .max-ht\:leading-\[60px\] {
-    line-height: 60px;
   }
 }
 
